--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,18 @@
   "keywords": [],
   "author": "",
   "contributors": [
-    { "name": "Garrick Henne", "email": "garrickhenne@outlook.com" },
-    { "name": "Robert Shum", "email": "robertshum@gmail.com" },
-    { "name": "Daniel Tan", "email": "danieltan380@gmail.com" }
+    {
+      "name": "Garrick Henne",
+      "email": "garrickhenne@outlook.com"
+    },
+    {
+      "name": "Robert Shum",
+      "email": "robertshum@gmail.com"
+    },
+    {
+      "name": "Daniel Tan",
+      "email": "danieltan380@gmail.com"
+    }
   ],
   "license": "ISC",
   "dependencies": {
@@ -24,6 +33,7 @@
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^1.4.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
