--- a/backend/package.json
+++ b/backend/package.json
@@ -38,11 +38,13 @@
     "@faker-js/faker": "^8.3.1",
     "@stylistic/eslint-plugin": "^1.4.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-session": "^2.0.48",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "cookie-session": "^2.0.0",
     "eslint": "^8.54.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
