--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
