--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "dbreset": "node dist/db/dbReset.js dbreset"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -33,7 +35,9 @@
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@stylistic/eslint-plugin": "^1.4.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
