--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/language": "^6.1.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
