--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
