--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 MONGO_USERNAME=<your-username>
 MONGO_PASS=<your-password>
 COOKIE_SESSION_KEY=<any-word-you-want-as-a-key>
+GEONAME_API_USERNAME=<geoname->
 
 # Serves as an example link format of how we connect to our mongodb database,
 # <username> and <password> is replaced with ${process.env.MONGO_USERNAME} and etc.
